ASSERTION FAILED: isUInt32() in jsc-layout-tests.yaml/js/script-tests/dfg-uint32-to-number-in-middle-of-copy-propagation.js.layout-dfg-eager-no-cjit https://bugs.webkit.org/show_bug.cgi?id=122419

Source/JavaScriptCore:

Reviewed by Oliver Hunt.

AI was using JSValue::asUInt32() incorrectly. That method presumes that the input is
both a int32 and a uint32 (it's in the range [0, 2^31)). The UInt32ToNumber node is
instead dealing with an input that is always represented as a int32 but that has the
meaning of a uint32 - so AI should use JSValue::asInt32() and then do the cast.

* dfg/DFGAbstractInterpreterInlines.h:
(JSC::DFG::::executeEffects):

LayoutTests:

Reviewed by Oliver Hunt.

* js/script-tests/dfg-uint32-to-number-in-middle-of-copy-propagation.js:



Canonical link: https://commits.webkit.org/140518@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157047 268f45cc-cd09-0410-ab3c-d52691b4dbfc